# btc-interval-mm-bot-v1

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.claude/: settings.local.json
docs/: CLAUDE.md  HOW_IT_WORKS.md  ToDo.md  session_summary.md
docs/plans/: 2026-03-09-probability-model-design.md
dry_run_tests/: README.md  analyze_results.py  run_test.py
models/: backtest_summary.json  btc_prob_model.pkl  significance_tests.json
scripts/: allowances_example.py  approve_allowances.py  backtest_flat_bets.py  close_all_positions.py  explore_nfl_structure.py  verify_live_trading.py
src/: __init__.py
src/belief_state/: __init__.py  belief.py  logit.py
src/common/: __init__.py  config.py  errors.py  logging.py
src/data_pipeline/: __init__.py  binance_fetcher.py  deribit_options_fetcher.py  gap_detector.py
src/lag_signal/: __init__.py  model.py  price_feed.py  skew.py
src/main_loop/: __init__.py  cli.py  dry_run.py  runner.py
src/persistence/: __init__.py  database.py  models.py  repository.py  schema.sql
src/polymarket_client/: __init__.py  client.py  fills.py  market_discovery.py  orderbook.py  orders.py  positions.py  types.py
src/probability_model/: __init__.py  base.py  calibrator.py  evaluator.py  features.py  model_adapter.py  trainer.py  xgboost_model.py
src/quoting/: __init__.py  avellaneda_stoikov.py  params.py  quote_calculator.py
src/risk/: __init__.py  inventory.py  position_tracker.py  risk_manager.py  stops.py  veto.py
src/wallet_approval/: __init__.py  account.py  approvals.py  (+1 more)
tests/: __init__.py  conftest.py
(+14 files in other folders)
